Fix levelling up and word wrap for runes.
closes #22, closes #23

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -94,6 +94,7 @@ a:active {
 
 .runes {
   text-align: center;
+  overflow-wrap: break-word;
 }
 
 #game-canvas {
